--- a/app/src/main/res/layout/talents_list.xml
+++ b/app/src/main/res/layout/talents_list.xml
@@ -10,93 +10,52 @@
         android:id="@+id/cardView_talents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:background="?android:attr/selectableItemBackground"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:alpha="0.7"
+        android:layout_margin="5dp"
         card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
             android:id="@+id/relativeLayoutTalentDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imgTalentDisplayPhoto"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
-                android:layout_marginEnd="10dp"
+                android:layout_width="fill_parent"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
                 android:clickable="true"
+                android:scaleType="fitXY"
                 android:src="@drawable/no_profile_pic"
                 android:focusable="true"
                 card_view:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/lblTalentFullname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_below="@id/imgTalentDisplayPhoto"
                 android:layout_marginBottom="5dp"
-                android:textSize="19sp"
+                android:textSize="15sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:gravity="start"
+                android:textAlignment="center"
+                android:gravity="center"
                 android:text="Talent Fullname"
                 card_view:ignore="HardcodedText" />
 
             <TextView
-                android:id="@+id/lblTalentGenderAndAge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentFullname"
-                android:drawableStart="@drawable/ic_info_black"
-                android:drawablePadding="5dp"
-                android:paddingStart="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Talent Gender &amp; Age"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblTalentLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentGenderAndAge"
-                android:drawableStart="@drawable/ic_my_location_black"
-                android:drawablePadding="5dp"
-                android:paddingStart="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Talent Location"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
                 android:id="@+id/lblTalentHourlyRate"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentLocation"
-                android:paddingStart="5dp"
+                android:layout_below="@id/lblTalentFullname"
                 android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textColor="@color/orange"
                 android:textStyle="bold"
                 android:gravity="start"
                 android:text="Talent Hourly Rate"
@@ -106,40 +65,29 @@
                 android:id="@+id/lblTalentCategories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
                 android:layout_below="@id/lblTalentHourlyRate"
                 android:layout_marginStart="5dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/textview_border_style_color_primary"
                 android:textStyle="bold"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 android:padding="5dp"
                 android:textColor="@color/colorPrimaryDarker"
                 android:text="Categories"
                 card_view:ignore="HardcodedText" />
 
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btnMoreDetails"
+            <TextView
+                android:id="@+id/lblTalentLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lblTalentCategories"
-                android:layout_marginTop="10dp"
-                android:background="@color/orange"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="More Details"
-                card_view:ignore="HardcodedText" />
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/btnUnavailableDates"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/btnMoreDetails"
-                android:layout_marginTop="10dp"
-                android:background="@color/basic_red"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="Unavailable Dates"
-                card_view:ignore="HardcodedText" />
+                android:layout_below="@id/lblTalentCategories"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:gravity="start"
+                android:text="Talent Location"
+                card_view:ignore="HardcodedText,RtlSymmetry" />
 
         </RelativeLayout>
 
