--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="green">#00FF00</color>
     <color name="gray">#ADACAC</color>
+    <color name="gainsboro">#DCDCDC</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="orange">#FFA500</color>
