--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,10 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="TintTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
     <style name="AppTheme.NoActionBar.NavigationView">
         <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="color">@color/black</item>
