Migrate project to AndroidX. Setup Stripe payment (UI only). Modified app name. Bug fixed on login (both client & talent). Bug fixed on auto populating available date & time in set booking details activity.

--- a/app/src/main/res/layout/activity_filtering.xml
+++ b/app/src/main/res/layout/activity_filtering.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -222,7 +222,7 @@
 
         </FrameLayout>
 
-        <android.support.v7.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnFilterNow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -237,4 +237,4 @@
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
