--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/background_home">
 
-            <android.support.v4.widget.SwipeRefreshLayout
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swipeToRefresh_bookingList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -28,7 +28,7 @@
                     app:offlineLayout="@layout/state_offline"
                     app:progressLayout="@layout/state_progress">
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView_bookingList"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -36,10 +36,10 @@
 
                 </cz.kinst.jakub.view.SimpleStatefulLayout>
 
-            </android.support.v4.widget.SwipeRefreshLayout>
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         </FrameLayout>
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
