--- a/app/src/main/res/layout/fragment_unavailable_dates.xml
+++ b/app/src/main/res/layout/fragment_unavailable_dates.xml
@@ -37,7 +37,7 @@
             app:offlineLayout="@layout/state_offline"
             app:progressLayout="@layout/state_progress">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_unavailableDates"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
