--- a/app/src/main/res/layout/talents_placeholder_layout.xml
+++ b/app/src/main/res/layout/talents_placeholder_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView_talents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -62,6 +62,6 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
