--- a/app/src/main/res/layout/checkout_details.xml
+++ b/app/src/main/res/layout/checkout_details.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_bookings"
@@ -18,173 +18,192 @@
         android:alpha="0.9"
         card_view:cardCornerRadius="4dp">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutTalentDetails"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imgTalentDisplayPhoto"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="15dp"
-                android:clickable="true"
-                android:src="@drawable/no_profile_pic"
-                android:focusable="true"
-                card_view:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/lblTalentFullname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="19sp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:gravity="start"
-                android:text="Talent Fullname"
-                card_view:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/lblTalentRatePerHour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentFullname"
-                android:paddingStart="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Rate Per Hour"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblTalentCategories"
+            <RelativeLayout
+                android:id="@+id/relativeLayoutTalentDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
-                android:layout_below="@id/lblTalentRatePerHour"
-                android:layout_marginStart="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/textview_border_style_color_primary"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:padding="8dp"
-                android:textColor="@color/colorPrimaryDarker"
-                android:text="Categories"
-                card_view:ignore="HardcodedText" />
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/lblBookingPreferredTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/imgTalentDisplayPhoto"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_schedule_black"
-                android:layout_marginTop="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Date"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
+                <ImageView
+                    android:id="@+id/imgTalentDisplayPhoto"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:clickable="true"
+                    android:src="@drawable/no_profile_pic"
+                    android:focusable="true"
+                    card_view:ignore="ContentDescription" />
 
-            <TextView
-                android:id="@+id/lblBookingPreferredDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredTime"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_date_range_black"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Time"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
+                <TextView
+                    android:id="@+id/lblTalentFullname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="19sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:gravity="start"
+                    android:text="Talent Fullname"
+                    card_view:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/lblBookingPreferredVenue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredDate"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_my_location_black"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Venue or Location"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
+                <TextView
+                    android:id="@+id/lblTalentRatePerHour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                    android:layout_below="@id/lblTalentFullname"
+                    android:paddingStart="5dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:gravity="start"
+                    android:text="Rate Per Hour"
+                    card_view:ignore="HardcodedText,RtlSymmetry" />
 
-            <TextView
-                android:id="@+id/lblBookingOtherDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredVenue"
-                android:paddingStart="5dp"
-                android:layout_marginTop="5dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Booking Other Details"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
+                <TextView
+                    android:id="@+id/lblTalentCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                    android:layout_below="@id/lblTalentRatePerHour"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/textview_border_style_color_primary"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:padding="8dp"
+                    android:textColor="@color/colorPrimaryDarker"
+                    android:text="Categories"
+                    card_view:ignore="HardcodedText" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnCancelBooking"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/lblBookingOtherDetails"
-                android:drawableStart="@drawable/ic_cancel_black"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/basic_red"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="Cancel Booking"
-                card_view:ignore="HardcodedText" />
+                <TextView
+                    android:id="@+id/lblBookingPreferredTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/imgTalentDisplayPhoto"
+                    android:paddingStart="5dp"
+                    android:drawableStart="@drawable/ic_schedule_black"
+                    android:layout_marginTop="5dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:gravity="start"
+                    android:text="Preferred Date"
+                    card_view:ignore="HardcodedText,RtlSymmetry" />
 
-            <com.stripe.android.view.CardMultilineWidget
-                android:id="@+id/card_multiline_widget"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/btnCancelBooking"
-                app:shouldShowPostalCode="false" />
+                <TextView
+                    android:id="@+id/lblBookingPreferredDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/lblBookingPreferredTime"
+                    android:paddingStart="5dp"
+                    android:drawableStart="@drawable/ic_date_range_black"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:gravity="start"
+                    android:text="Preferred Time"
+                    card_view:ignore="HardcodedText,RtlSymmetry" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnPayUsingDebitOrCreditCard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/card_multiline_widget"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary"
-                android:drawableStart="@drawable/ic_credit_card_black"
-                android:drawablePadding="10dp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="Pay using Debit/Credit Card"
-                card_view:ignore="HardcodedText" />
+                <TextView
+                    android:id="@+id/lblBookingPreferredVenue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/lblBookingPreferredDate"
+                    android:paddingStart="5dp"
+                    android:drawableStart="@drawable/ic_my_location_black"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:gravity="start"
+                    android:text="Preferred Venue or Location"
+                    card_view:ignore="HardcodedText,RtlSymmetry" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnPayUsingBankTransferOrDeposit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/btnPayUsingDebitOrCreditCard"
-                android:drawableStart="@drawable/ic_account_balance_black"
-                android:layout_marginTop="10dp"
-                android:background="@color/dark_moderate_violet"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:text="Pay using Bank Transfer/Deposit"
-                card_view:ignore="HardcodedText" />
+                <TextView
+                    android:id="@+id/lblBookingOtherDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/lblBookingPreferredVenue"
+                    android:paddingStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:gravity="start"
+                    android:text="Booking Other Details"
+                    card_view:ignore="HardcodedText,RtlSymmetry" />
 
-        </RelativeLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnCancelBooking"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lblBookingOtherDetails"
+                    android:drawableStart="@drawable/ic_cancel_black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/basic_red"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="Cancel Booking"
+                    card_view:ignore="HardcodedText" />
+
+                <com.stripe.android.view.CardMultilineWidget
+                    android:id="@+id/card_multiline_widget"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btnCancelBooking"
+                    app:shouldShowPostalCode="false" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnPayUsingDebitOrCreditCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/card_multiline_widget"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/colorPrimary"
+                    android:drawableStart="@drawable/ic_credit_card_black"
+                    android:drawablePadding="10dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="Pay using Debit/Credit Card"
+                    card_view:ignore="HardcodedText" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnPayUsingBankTransfer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btnPayUsingDebitOrCreditCard"
+                    android:drawableStart="@drawable/ic_account_balance_black"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/dark_moderate_violet"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="Pay using Bank Transfer"
+                    card_view:ignore="HardcodedText" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnPayUsingBankDeposit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btnPayUsingBankTransfer"
+                    android:drawableStart="@drawable/ic_account_balance_black"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/orange"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="Pay using Bank Deposit"
+                    card_view:ignore="HardcodedText" />
+
+            </RelativeLayout>
+
+        </ScrollView>
 
     </androidx.cardview.widget.CardView>
 
