--- a/app/src/main/res/layout/dialog_add_talent_reviews.xml
+++ b/app/src/main/res/layout/dialog_add_talent_reviews.xml
@@ -22,10 +22,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <TextView
+                        android:id="@+id/lblAddReviewsCaption"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Add Talent Reviews"
+                        android:padding="10dp"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        tools:ignore="HardcodedText" />
+
                     <me.zhanghai.android.materialratingbar.MaterialRatingBar
                         android:id="@+id/talentRatingBar"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
+                        android:layout_below="@+id/lblAddReviewsCaption"
                         android:layout_centerHorizontal="true"
                         app:mrb_progressTint="@color/colorPrimary"
                         style="@style/Widget.MaterialRatingBar.RatingBar" />
