--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,6 +142,19 @@
             android:background="@drawable/underline_labels"
             android:layout_marginBottom="20dp"/>
 
+        <TextView
+            android:id="@+id/lblAppVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:gravity="center|bottom"
+            android:text="HIRE US PH"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginBottom="20dp"
+            tools:ignore="HardcodedText" />
+
     </LinearLayout>
 
 </FrameLayout>
