Change version placement. Fixed app crashed on homepage (canvas: drawing too large bitmap). Regenerate APK v1.1.

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:background="@drawable/background_image_gradient">
 
     <ImageView
-        android:id="@+id/logo_id"
+        android:id="@+id/imgLogo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
         android:background="@drawable/rounded_icon"
         android:src="@drawable/hire_us_logo"/>
+
+    <TextView
+        android:id="@+id/lblAppVersion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="center_horizontal"
+        android:text="HIRE US PH"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_below="@id/imgLogo"
+        android:textColor="@color/white"
+        android:layout_marginBottom="20dp"
+        tools:ignore="HardcodedText" />
 
 </RelativeLayout>
