--- a/app/src/main/res/layout/talents_list.xml
+++ b/app/src/main/res/layout/talents_list.xml
@@ -15,6 +15,7 @@
         android:clickable="true"
         android:focusable="true"
         android:layout_margin="5dp"
+        android:padding="3dp"
         card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
@@ -63,10 +64,11 @@
 
             <TextView
                 android:id="@+id/lblTalentCategories"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lblTalentHourlyRate"
                 android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/textview_border_style_color_primary"
                 android:textStyle="bold"
@@ -82,8 +84,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lblTalentCategories"
                 android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="12sp"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:gravity="start"
                 android:text="Talent Location"
