Fixed can't proceed to talent profile page after clicking profile image in home page. Fixed missing PM preferred time selection. Fixed misaligned hourly rate in talent profile page. Added confirmation dialog before actual transaction for bank transfer & bank deposit. Added regions dropdown field in filtering module. Applied some changes to resolve issue about canvas: drawing too large bitmap. Regenerate APK v1.1.

--- a/app/src/main/res/layout/activity_filtering.xml
+++ b/app/src/main/res/layout/activity_filtering.xml
@@ -29,6 +29,18 @@
                     android:textSize="18sp"
                     tools:ignore="HardcodedText" />
 
+                <org.angmarch.views.NiceSpinner
+                    android:id="@+id/cmbRegion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Choose Region"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="18sp"
+                    android:textAlignment="textStart"
+                    tools:ignore="HardcodedText" />
+
                 <LinearLayout
                     android:id="@+id/linearLayoutLocation"
                     android:layout_width="match_parent"
@@ -44,7 +56,7 @@
                         android:hint="Choose Province"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textAlignment="textStart"
                         tools:ignore="HardcodedText" />
 
@@ -57,7 +69,7 @@
                         android:hint="Choose City"
                         android:textColor="@color/black"
                         android:textColorHint="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         tools:ignore="HardcodedText" />
 
                 </LinearLayout>
