--- a/app/src/main/res/layout/activity_talent_model_profile.xml
+++ b/app/src/main/res/layout/activity_talent_model_profile.xml
@@ -79,7 +79,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
                         <customfonts.MyTextView
                             android:id="@+id/lblTalentHourlyRateCaption"
@@ -87,7 +87,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Hourly Rate"
-                            android:textSize="15sp"
+                            android:textSize="20sp"
                             android:textColor="@color/colorSub"
                             tools:ignore="HardcodedText" />
 
@@ -97,7 +97,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.8"
                             android:text="&#8369;750.00"
-                            android:textSize="20sp"
+                            android:textSize="22sp"
                             android:textColor="@color/colorTex"
                             tools:ignore="HardcodedText" />
                     </LinearLayout>
