--- a/app/src/main/res/layout/bookings_list.xml
+++ b/app/src/main/res/layout/bookings_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -35,115 +34,68 @@
                 android:focusable="true"
                 card_view:ignore="ContentDescription" />
 
-            <TextView
-                android:id="@+id/lblTalentFullname"
+            <customfonts.MyTextView
+                android:id="@+id/lblTalentFullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/imgTalentDisplayPhoto"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:gravity="start"
                 android:text="Talent Fullname"
                 card_view:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/lblBookingPreferredTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/imgTalentDisplayPhoto"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_schedule_black"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Date"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblBookingPreferredDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredTime"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_date_range_black"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Time"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblBookingPreferredVenue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredDate"
-                android:paddingStart="5dp"
-                android:drawableStart="@drawable/ic_my_location_black"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Preferred Venue"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <TextView
-                android:id="@+id/lblBookingOtherDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lblBookingPreferredVenue"
-                android:paddingStart="5dp"
-                android:layout_marginTop="5dp"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:gravity="start"
-                android:text="Booking Other Details"
-                card_view:ignore="HardcodedText,RtlSymmetry" />
-
-            <LinearLayout
+            <customfonts.MyTextView
+                android:id="@+id/lblTalentCategories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@id/lblBookingOtherDetails"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_toEndOf="@id/imgTalentDisplayPhoto"
+                android:layout_below="@id/lblTalentFullName"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/textview_border_style_color_primary"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:padding="8dp"
+                android:textColor="@color/colorPrimaryDarker"
+                android:text="Categories"
+                card_view:ignore="HardcodedText" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnTalentDetails"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/orange"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:layout_marginStart="5dp"
-                    android:drawableLeft="@drawable/ic_info_black"
-                    android:padding="10dp"
-                    android:textSize="12sp"
-                    android:text="Talent Details"
-                    card_view:ignore="HardcodedText" />
+            <customfonts.MyTextView
+                android:id="@+id/lblBookingGeneratedId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imgTalentDisplayPhoto"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:text="Booking Generated ID"
+                card_view:ignore="HardcodedText" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnAddTalentReviews"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/red"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:drawableLeft="@drawable/ic_rate_review_black"
-                    android:padding="10dp"
-                    android:textSize="12sp"
-                    android:text="Add Reviews"
-                    card_view:ignore="HardcodedText" />
-
-            </LinearLayout>
-
-
+            <customfonts.MyTextView
+                android:id="@+id/lblBookingOfferStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lblBookingGeneratedId"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:text="Booking Offer Status"
+                card_view:ignore="HardcodedText" />
 
         </RelativeLayout>
 
